# tinytim

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
examples/: columns.ipynb  data functions examples.ipynb  data functions.ipynb  dropna examples.ipynb  edit functions.ipynb  edit.ipynb  fillna examples.ipynb  groupby examples.ipynb  groupby.ipynb  join functions.ipynb  json.ipynb  rows.ipynb
src/tinytim/: __init__.py  columns.py  copy.py  custom_types.py  data.py  dropna.py  edit.py  fillna.py  filter.py  group.py  insert.py  interfaces.py  isna.py  join.py  json.py  rows.py  sequences.py  utils.py  validate.py
src/tinytim/docs/_build/doctrees/: modules.doctree  tinytim.doctree
src/tinytim/docs/_build/html/: .buildinfo  (+5 more)
tests/: test_columns.py  test_data.py  test_edit.py  test_join.py  test_json.py  test_na.py  test_rows.py  test_utils.py
tinytim/: __init__.py  columns.py  copy.py  data.py  dropna.py  edit.py  edit_functional.py  edit_inplace.py  fillna.py  filter.py  group.py  join.py  json.py  na.py  rows.py  utils.py  validate.py
tinytim/docs/: code.rst  conf.py  index.rst  modules.rst  tinytim.rst
tinytim/docs/_build/doctrees/: code.doctree  environment.pickle  index.doctree  tinytim.doctree
tinytim/docs/_build/html/: .buildinfo  code.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tinytim.html
tinytim/functional/: group.py  table.py  utils.py
(+4 files in other folders)
