[metadata]
name = tinytim
version = 1.11.0
description = Pure Python data table functions.
author = Odos Matthews
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages =
    tinytim
install_requires =
    dictanykey>=0.0.5
    hasattrs>=0.0.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    mypy==0.910

[options.package_data]
tinytim = py.typed

[flake8]
max-line-length = 160